--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "lint": "task list",
     "preload": "task preload",
     "prepare": "npm run start && (test -f Taskfile.yml && task npm:prepare) || true",
-    "prepublishOnly": "task npm:bundle:create",
+    "prepublishOnly": "test -z SKIP_NPM_PREPUBLISHONLY && task npm:bundle:create",
     "release": "task publish:semantic-release",
     "repair": "bash <(curl -sS https://install.doctor/repair)",
     "start": "test -z SKIP_NPM_START && bash start.sh",
@@ -58,10 +58,13 @@
     "class-validator": "^0.13.1",
     "cosmiconfig": "^7.0.1",
     "go-npm": "^0.1.9",
+    "jest-html-reporters": "^3.0.6",
+    "jest-junit": "^13.0.0",
     "nest-commander": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "shelljs": "^0.8.4",
+    "tar": "^6.1.11",
     "tslib": "latest",
     "update-notifier": "^5.1.0"
   },
@@ -73,6 +76,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/node": "^16.11.6",
     "@types/shelljs": "^0.8.9",
+    "@types/tar": "^6.1.1",
     "@types/update-notifier": "^5.1.0",
     "@washingtondc/development": "latest",
     "esbuild": "^0.12.29",
@@ -112,13 +116,16 @@
     "node": ">=14.18.0"
   },
   "publishConfig": {
-    "@megabyte:registry": "https://gitlab.com/api/v4/projects//packages/npm/",
+    "@megabyte:registry": "https://gitlab.com/api/v4/projects/34421346/packages/npm/",
     "access": "public"
   },
   "blueprint": {
     "binName": "produndle",
     "customPackageName": "produndle",
     "description": "A tool that handles compressing, bundling, and unpacking production node_modules dependencies that you want to store in source control",
+    "github_id": "R_kgDOG_K9AQ",
+    "gitlab_group_id": "14035146",
+    "gitlab_project_id": "34421346",
     "group": "npm",
     "name": "Produndle",
     "overview": "**Produndle** is a project that brings [pac](https://www.npmjs.com/package/pac) back to life (and support modern versions of Node.js. To achieve the fastest deployments possible, the production `node_modules/` (not devDependencies or any of that optional stuff) can be compressed by running `produndle pack` and stored in source control. Then, when deployment time comes all you have to do is uncompress or run `produndle unpack`. This works well when you also run [node-prune](https://github.com/tj/node-prune) on your `node_modules/` folder, before compressing your production dependencies. We even take it a step further in some cases and create global shared configurations for libraries like [ESLint](https://github.com/ProfessorManhattan/eslint-config-strict-mode) and [Prettier](https://github.com/ProfessorManhattan/prettier-config-sexy-mode) that dynamically load their plugins into `node_modules/` by downloading compressed plugins from source control without having to run `npm install`. We fuss about the performance of our `node_modules/` installation time because it is often a bottleneck.",
@@ -129,10 +136,7 @@
     "slug": "produndle",
     "snapPackage": "produndle",
     "subgroup": "cli",
-    "title": "Bundle Your Production Dependencies with Produndle",
-    "github_id": "R_kgDOG_K9AQ",
-    "gitlab_project_id": "34421346",
-    "gitlab_group_id": "14035146"
+    "title": "Bundle Your Production Dependencies with Produndle"
   },
   "changelog": {
     "displayTypes": [
